<resources>
    <string name="app_name">Salon Review</string>
    <string name="button_login_as_guest">Use as guest</string>
    <string name="tittle_background">background</string>
    <string name="button_login_to_ad"><u>Login to advertise your salon </u></string>
    <string name="hint_user_name">User name</string>
    <string name="hint_password">Password</string>
    <string name="hint_repassword">Repassword</string>
    <string name="hint_email">Email</string>
    <string name="button_sign_up">Sign Up Free</string>
    <string name="button_sign_in">Sign In</string>
    <string name="hint_search">Search</string>
    <string name="check_box_remember">Remember account?</string>
    <string name="button_dont_have">Don\'t have account? Sign up here</string>
    <string name="title_hot">Hot Salon</string>
    <string name="title_new">New Salon</string>
    <string name="viewport_24">24.0</string>
    <string name="error_email">Wrong email or user no exsist</string>
    <string name="error_empty_field_email">Fill in field Email please</string>
    <string name="error_empty_field_password">Fill in field Password please</string>
    <string name="error_password">Invalid password</string>
    <string name="error_email_form">Invalid email form</string>
    <string name="error_email_exsist">This email has been used</string>
    <string name="error_short_password">Password must longer 5 charactor</string>
    <string name="error_empty_field_re_password">Fill in field Repassword please</string>
    <string name="error_empty_field_user_name">Fill in field Username please</string>
    <string name="error_not_match_password">Repassword do not match password</string>
    <string name="error_when_sign_up">Error when sign up</string>
    <string name="msg_welcome">Welcome </string>
    <string name="msg_wait">please wait</string>
    <string name="msg_sign_up_success">Sign up succeed</string>
    <string name="title_sign_in">Signing in</string>
    <string name="title_sign_up">Signing up</string>
    <string name="title_salon_name">Salon name</string>
    <string name="title_view">\t view</string>
    <string name="title_views">\t views</string>
    <string name="title_salon_address">Salon_address</string>
    <string name="title_hot_fragment">Hot</string>
    <string name="title_new_fragment">New</string>
    <string name="tittle_choose">Click to choose image</string>
    <string name="title_open">Open:</string>
    <string name="tittle_close">Close:</string>
    <string name="hint_description">Description</string>
    <string name="hint_salon_name">Salon name</string>
    <string name="hint_address">Salon address</string>
    <string name="hint_phone">Phone number</string>
    <string name="button_publish">Publish</string>
    <string name="title_view_number">view number</string>
    <string name="title_get_location"><u>Get location</u></string>
    <string name="tittle_dial_phone"><u>Dial salon\'s phone number</u></string>
    <string name="tittle_write_email"><u>Write email to salon</u></string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="msg_please_wait_for_publishing">Please wait for publishing</string>
    <string name="msg_please_wait_few_second">Please wait few second</string>
    <string name="error_when_publishing">Error when publishing</string>
    <string name="msg_publish_success">Publish success</string>
    <string name="error_salon_name">Salon name invalid</string>
    <string name="error_salon_address">Salon address invalid</string>
    <string name="error_salon_phone">Salon phone invalid</string>
    <string name="error_salon_email">Salon email invalid</string>
    <string name="error_salon_email_form">Salon email form invalid</string>
    <string name="error_salon_time">Time open can not equal close</string>
    <string name="error_salon_image">Please pick an other image</string>
    <string name="error_spick_image">Can not pick image</string>
    <string name="button_update">Update</string>
    <string name="rate_sason"><u>Rate Salon</u></string>
    <string-array name="spiner_time">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>:1300</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
</resources>
