<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="@dimen/heigh_edit_text"
        android:layout_marginStart="@dimen/dimen_30"
        android:layout_marginTop="@dimen/dimen_50"
        android:layout_marginEnd="@dimen/dimen_30"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_backgound" />

    <EditText
        android:id="@+id/edit_user_name"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="@dimen/heigh_edit_text"
        android:layout_marginStart="@dimen/dimen_30"
        android:layout_marginTop="@dimen/dimen_30"
        android:layout_marginEnd="@dimen/dimen_30"
        android:ems="10"
        android:hint="@string/hint_user_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="@dimen/heigh_edit_text"
        android:layout_marginStart="@dimen/dimen_30"
        android:layout_marginTop="@dimen/dimen_30"
        android:layout_marginEnd="@dimen/dimen_30"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_user_name" />

    <EditText
        android:id="@+id/edit_repassword"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="@dimen/heigh_edit_text"
        android:layout_marginStart="@dimen/dimen_30"
        android:layout_marginTop="@dimen/dimen_30"
        android:layout_marginEnd="@dimen/dimen_30"
        android:ems="10"
        android:hint="@string/hint_repassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />

    <ImageView
        android:id="@+id/image_backgound"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="@dimen/dimen_150"
        android:layout_marginEnd="@dimen/dimen_0"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_sign_up" />

    <Button
        android:id="@+id/button_sign_up"
        style="@style/ButtonDarkGray"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_55"
        android:layout_marginTop="@dimen/dimen_30"
        android:layout_marginEnd="@dimen/dimen_55"
        android:layout_marginBottom="@dimen/dimen_20"
        android:text="@string/button_sign_up"
        android:textAllCaps="false"
        android:textSize="@dimen/text_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_repassword" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
