<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundsalons">

    <ImageView
        android:layout_width="@dimen/dimen_0"
        android:layout_height="@dimen/dimen_0"
        android:layout_marginStart="@dimen/dimen_55"
        android:layout_marginTop="@dimen/dimen_55"
        android:layout_marginEnd="@dimen/dimen_55"
        android:contentDescription="@string/tittle_background"
        app:layout_constraintDimensionRatio="5:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_logo" />

    <Button
        android:id="@+id/button_guest"
        style="@style/ButtonDarkGray"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_55"
        android:layout_marginEnd="@dimen/dimen_55"
        android:layout_marginBottom="@dimen/dimen_150"
        android:text="@string/button_login_as_guest"
        android:textSize="@dimen/text_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_login_to_ad"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginEnd="@dimen/dimen_10"
        android:layout_marginBottom="@dimen/dimen_10"
        android:text="@string/button_login_to_ad"
        android:textAllCaps="false"
        android:textColor="@color/color_dark_blue"
        android:textSize="@dimen/text_22"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_guest" />
</android.support.constraint.ConstraintLayout>
