<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_10"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/dimen_5"
    app:cardElevation="@dimen/dimen_5">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10">

        <TextView
            android:id="@+id/text_salon_name"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/title_salon_name"
            android:textColor="@color/color_dark_blue"
            android:textSize="@dimen/text_22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageSalon" />

        <ImageView
            android:id="@+id/imageSalon"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/dimen_200"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image_choose" />

        <TextView
            android:id="@+id/text_view_number"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:text="@string/title_view_number"
            android:textColor="@color/color_dark_blue"
            android:textSize="@dimen/text_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_salon_name" />

        <TextView
            android:id="@+id/text_salon_address"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:text="@string/title_salon_address"
            android:textColor="@color/color_dark_blue"
            android:textSize="@dimen/text_18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_number"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
